[package]
name = "trascri"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.5.0", package = "gtk4", features = ["v4_6"] }
vosk = "0.2.0"
ashpd = "0.3.2"
gst = { version = "0.19", package = "gstreamer" }
gst_app = { package = "gstreamer-app", version = "0.19.2" }
gst_audio = { package = "gstreamer-audio", version = "0.19.2" }
anyhow = "1.0.66"
byte-slice-cast = "1.2.2"
futures = "0.3.25"
serde = "1.0.147"
serde_json = "1.0.89"
ureq = "2.5.0"
cap-std = "1.0.1"
zip = "0.6.3"

[dependencies.adw]
package = "libadwaita"
version = "0.2.0"
features = ["v1_2"]
